<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2011 Wglxy.com

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<resources>
    <string name="hello">Choose one of the features below.</string>

    <string name="app_name">Tryout</string>
    <string name="description_logo">Demo</string>

    <string name="description_about">About</string>
    <string name="description_home">Home</string>
    <string name="description_search">Search</string>
    <string name="description_feature1">Materi</string>
    <string name="description_feature2">Try Out</string>
    <string name="description_feature3">Tips</string>
    <string name="description_feature4">Statistik</string>
    <string name="description_feature5">Rapor</string>
    <string name="description_feature6">Bimbel</string>

    <string name="title_about">About</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_feature1">Materi</string>
    <string name="title_feature2">Try Out</string>
    <string name="title_feature3">Tips</string>
    <string name="title_feature4">Statistik</string>
    <string name="title_feature5">Rapor</string>
    <string name="title_feature6">Bimbel</string>

    <string name="default_intro">This is the default content view for an activity. Be sure to change your activity\'s onCreate method. Use setContentView on a custom layout.</string>
    <string name="feature1_intro">Feature 1 content goes here.</string>
    <string name="feature2_intro">Feature 2 content goes here.</string>
    <string name="feature3_intro">Feature 3 content goes here.</string>
    <string name="feature4_intro">Feature 4 content goes here.</string>
    <string name="feature5_intro">Feature 5 content goes here.</string>
    <string name="bimbel">Halaman untuk promo bimbel</string>

    <string name="about_intro">Qlay</string>
    <string name="search_intro">Content for the Search page goes here.</string>
    <string name="mapel_mtk">Matematika</string>
    <string name="mapel_bin">Bahasa Indonesia</string>
    <string name="mapel_big">Bahasa Inggris</string>
    <string name="mapel_ipa">Ilmu Pengetahuan Alam</string>
    <string name="title_materi_mtk">Matematika</string>
    <string name="url_server">http://10.0.2.2/tryout/</string>
    
</resources>
