<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/db1_root"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout style="@style/TitleBar">
        <ImageView style="@style/TitleBarLogo"
            android:contentDescription="@string/description_logo"
            android:src="@drawable/title_logo" />

        <ImageView style="@style/TitleBarSeparator" />
        <TextView style="@style/TitleBarText" />
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_search"
            android:src="@drawable/title_logout"
            android:onClick="onClickLogout" />
</LinearLayout>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="10dip">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        
        <Button android:id="@+id/home_btn_feature2"
            style="@style/HomeButton"
            android:onClick="onClickFeature"
            android:text="@string/title_feature2"
            android:drawableTop="@drawable/home_button2"
        	android:background="#EEE" android:padding="10dp"
        	android:layout_margin="2dp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        
        <Button android:id="@+id/home_btn_feature1"
            style="@style/HomeButton"
            android:onClick="onClickFeature"
            android:text="@string/title_feature1"
            android:drawableTop="@drawable/home_button1"
        	android:background="#EEE" android:padding="10dp"
        	android:layout_margin="2dp"/>
        <Button android:id="@+id/home_btn_feature3"
            style="@style/HomeButton"
            android:onClick="onClickFeature"
            android:text="@string/title_feature3"
            android:drawableTop="@drawable/home_button3"
        	android:background="#EEE" android:padding="10dp"
        	android:layout_margin="2dp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <Button android:id="@+id/home_btn_feature5"
            style="@style/HomeButton"
            android:onClick="onClickFeature"
            android:text="@string/title_feature5"
            android:drawableTop="@drawable/home_button5"
        	android:background="#EEE" android:padding="10dp"
        	android:layout_margin="2dp"/>
        
        <Button android:id="@+id/home_btn_feature4"
            style="@style/HomeButton"
            android:onClick="onClickFeature"
            android:text="@string/title_feature4"
            android:drawableTop="@drawable/home_button4"
        	android:background="#EEE" android:padding="10dp"
        	android:layout_margin="2dp"/>
    </LinearLayout>

</LinearLayout>

</LinearLayout>
